project1/kube_yaml/ingress/ingress_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-app
  labels:
    app: first-app
spec:
  containers:
  - name: first-app
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
  imagePullSecrets:
  - name: docker-pull-secret
---
apiVersion: v1
kind: Pod
metadata:
  name: second-app
  labels:
    app: second-app
spec:
  containers:
  - name: second-app
    image: httpd:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
  imagePullSecrets:
  - name: docker-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    app: first-app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: second-service
spec:
  selector:
    app: second-app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: "kube.web.co.kr"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: first-service
            port: 
              number: 80
      - pathType: Prefix
        path: /first
        backend:
          service:
            name: first-service
            port: 
              number: 80
      - pathType: Prefix
        path: /second
        backend:
          service:
            name: second-service
            port: 
              number: 80
